Close #2 for local db access

--- a/COMP367-Quiz4/Views/Home/Index.cshtml
+++ b/COMP367-Quiz4/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <p>Local database access has added on April 14, 2023 by Yiseul Ko #301137955</p>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
